[tool.black]
line-length = 90
target-version = ['py37']
skip-string-normalization = true
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
line_length = 90
skip = '.venv/,migrations/,manage.py,instance.py,hook_main.py'
known_first_party = 'app'
known_third_party = 'flask'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.poetry]
name = "open-event-server"
version = "0.1.0"
description = ""
authors = ["iamareebjamal <jamal.areeb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
Flask-Limiter = "^1.4"
Flask-Script = "^2.0.6"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Flask-Login = "^0.5.0"
Flask-Scrypt = "^0.1.3"
Flask-JWT-Extended = "^3.24.1"
Flask-CeleryExt = "^0.3.4"
Flask-Caching = "^1.9.0"
Flask-Cors = "^3.0.9"
Flask-Admin = "^1.5.6"
flask-redis = "^0.4.0"
SQLAlchemy = "^1.3.19"
SQLAlchemy-Continuum = "^1.3.11"
psycopg2-binary = "^2.8.6"
redis = "^3.5.3"
celery = "^4.4.7"
gunicorn = "^20.0.4"
pytz = "^2020.1"
requests = {extras = ["security"], version = "^2.24.0"}
WTForms = {extras = ["email"], version = "^2.3.3"}
sentry-sdk = {extras = ["flask"], version = "^0.18.0"}
marshmallow = "^2.15.2"
stripe = "^2.54.0"
paypalrestsdk = "^1.13.1"
omise = "^0.9.0"
sendgrid = "^6.4.7"
"marrow.mailer" = "^4.0.3"
python-magic = "^0.4.18"
python-dotenv = "^0.14.0"
pycryptodome = "^3.9.8"
qrcode = "^6.1"
oauth2 = "^1.9.0"
Pillow = "^7.2.0"
forex-python = "^1.5"
itsdangerous = "^1.1.0"
bleach = "^3.2.1"
envparse = "^0.2.0"
eventlet = "^0.28.0"
WeasyPrint = "^51"
healthcheck = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
